# ipu_applied_robotics

./: .gitignore  README.md
foxy_ws/src/my_lidar/: setup.py
noetic_ws/src/tc3-ros-package/blobs_msgs/: CMakeLists.txt
noetic_ws/src/tc3-ros-package/blobs_msgs/msg/: Blob.msg
noetic_ws/src/tc3-ros-package/line_msgs/msg/: Line.msg  LineArray.msg
noetic_ws/src/tc3-ros-package/tc3-ros-package/: CMakeLists.txt
noetic_ws/src/tc3-ros-package/tc3-ros-package/launch/: multiply_tc3.launch
noetic_ws/src/tc3-ros-package/tc3-ros-package/src/: camera_old.py
ws_foxy/src/my_lidar/: package.xml  setup.cfg
ws_noetic/src/tc3-ros-package/: README.md
ws_noetic/src/tc3-ros-package/blobs_msgs/msg/: BlobArray.msg
ws_noetic/src/tc3-ros-package/circle_msgs/: CMakeLists.txt
ws_noetic/src/tc3-ros-package/circle_msgs/msg/: Circle.msg  CircleArray.msg
ws_noetic/src/tc3-ros-package/line_msgs/: CMakeLists.txt
ws_noetic/src/tc3-ros-package/tc3-ros-package/: README.md
ws_noetic/src/tc3-ros-package/tc3-ros-package/launch/: tc3.launch
ws_noetic/src/tc3-ros-package/tc3-ros-package/src/: 3281738823
